# src/resources/songs/songs.controller.ts
@@ -4,14 +4,21 @@ import {
   Delete,
   Get,
   Param,
-  Patch,
   Post,
+  Put,
 } from '@nestjs/common';
-import { ApiTags } from '@nestjs/swagger';
+import {
+  ApiCreatedResponse,
+  ApiNotFoundResponse,
+  ApiOperation,
+  ApiTags,
+} from '@nestjs/swagger';
+import { AllExceptionsResponseDto } from 'src/common/filters/all-exceptions/dtos/all-exceptions-response.dto';
+import { MongoObjectIdPipe } from 'src/common/pipes/mongo-object-id/mongo-object-id.pipe';
 import { CreateSongDto } from './dtos/create-song.dto';
+import { FindSongDto } from './dtos/find-song.dto';
 import { UpdateSongDto } from './dtos/update-song.dto';
 import { SongsService } from './songs.service';
-import { MongoObjectIdPipe } from 'src/common/pipes/mongo-object-id/mongo-object-id.pipe';
 
 @Controller('songs')
 @ApiTags('songs')
@@ -19,6 +26,15 @@ export class SongsController {
   constructor(private readonly songsService: SongsService) {}
 
   @Post()
+  @ApiOperation({ summary: 'Create a song' })
+  @ApiCreatedResponse({
+    description: 'The song has been created',
+    type: FindSongDto,
+  })
+  @ApiNotFoundResponse({
+    description: 'Song not found',
+    type: AllExceptionsResponseDto,
+  })
   createSong(@Body() createSongDto: CreateSongDto) {
     return this.songsService.createSong(createSongDto);
   }
@@ -33,7 +49,7 @@ export class SongsController {
     return this.songsService.findSongById(id);
   }
 
-  @Patch(':id')
+  @Put(':id')
   updateSongById(
     @Param('id', MongoObjectIdPipe) id: string,
     @Body() updateSongDto: UpdateSongDto
